--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- http://www.fhoke.com/ -->
             <article id="component1">
                 <h1>Navigation Menu</h1>
-                <a href="http://www.fhoke.com/"><img src="images/blogImages/Nav.png"></a>
+                <a href="http://www.fhoke.com/"><img src="images/blogImages/Nav.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>The target audience for Fhoke is any business (most likely small) looking to create their website. I don't believe there is any preference towards a gender for their target audience. There seems to be a target age for their audience however. The design tells me that they are a young modern design firm looking to help business owners from their 20s up to middle aged people. In other words, they are not targeting people too young to work or people that have retired. They are looking for clients that are business owners.</p>
                 <h2>Client and User Needs</h2>
@@ -37,7 +37,7 @@
             <!-- https://squareup.com/reader -->
             <article id="component2">
                 <h1>General About</h1>
-                <a href="https://squareup.com/reader"><img src="images/blogImages/AboutGeneral.png"></a>
+                <a href="https://squareup.com/reader"><img src="images/blogImages/AboutGeneral.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>The target audience for Squareup are businesses looking to make sales anywhere they go. This would generally apply to smaller companies, as bigger companies can usually afford a more advanced setup. There is no target gender for this product. The target age for their product can be anyone old enough to own a business. It would generally target people 20 and up, but it can be for any business owner (no matter the age).</p>
                 <h2>Client and User Needs</h2>
@@ -61,7 +61,7 @@
 			<!-- http://bixbipet.com/ -->
             <article id="component4">
                 <h1>Call to Action</h1>
-                <a href="http://bixbipet.com/"><img src="images/blogImages/CTA.png"></a>
+                <a href="http://bixbipet.com/"><img src="images/blogImages/CTA.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>BIXBI is a company that makes dog treats. Their target audience is dog owners. I don't believe that they are targeting a particular gender. They are going for the modern hip look while creating healthy snacks for your dog. Because of the style and design of their treats, I believe the target age for their audience is young adults (people in their 20s and 30s). However, because of their claim to be natural and healthy, their audience can really be any age.</p>
                 <h2>Client and User Needs</h2>
@@ -73,7 +73,7 @@
 			<!-- http://www.creativedepartment.com/contact-us/ -->
             <article id="component5">
                 <h1>Contact</h1>
-                <a href="http://www.creativedepartment.com/contact-us/"><img src="images/blogImages/Contact.png"></a>
+                <a href="http://www.creativedepartment.com/contact-us/"><img src="images/blogImages/Contact.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>Creative Department is another design agency. Their target audience is small businesses looking to create friendly approachable branding. They do not have a target gender for their work. The target age for their audience is people old enough to work at/own a business.</p>
                 <h2>Client and User Needs</h2>
@@ -85,7 +85,7 @@
 			<!-- http://poshcss.com/ -->
             <article id="component6">
                 <h1>Blog</h1>
-                <a href="http://poshcss.com/"><img src="images/blogImages/Blog.png"></a>
+                <a href="http://poshcss.com/"><img src="images/blogImages/Blog.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>POSHCSS is a web blog targeting web designers. They post stories from many different sources with information on web design. There is no target gender for POSHCSS. The title of their site, "For the modern day web designer," leads me to believe that the target age of their audience is younger web designers. But based off of the information that they post, their audience could be any web designer, young or old.</p>
                 <h2>Client and User Needs</h2>
@@ -97,7 +97,7 @@
 			<!-- https://login.mailchimp.com/ -->
             <article id="component7">
                 <h1>Log In</h1>
-                <a href="https://login.mailchimp.com/"><img src="images/blogImages/LogIn.png"></a>
+                <a href="https://login.mailchimp.com/"><img src="images/blogImages/LogIn.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>MailChimp is a tool that allows people to design visual/creative emails. Their target audience is businesses. They offer a tool that can help them visually convey the company's idea or message. There is not target gender for MailChimp. The target age of their audience is, once again, people old enough to be in business.</p>
                 <h2>Client and User Needs</h2>
@@ -109,7 +109,7 @@
 			<!-- http://www.creativedepartment.com/contact-us/ -->
             <article id="component8">
                 <h1>Map</h1>
-                <a href="http://www.creativedepartment.com/contact-us/"><img src="images/blogImages/Map.png"></a>
+                <a href="http://www.creativedepartment.com/contact-us/"><img src="images/blogImages/Map.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>Creative Department is another design agency. Their target audience is small businesses looking to create friendly approachable branding. They do not have a target gender for their work. The target age for their audience is people old enough to work at/own a business.</p>
                 <h2>Client and User Needs</h2>
@@ -121,7 +121,7 @@
 			<!-- https://plus.google.com/ -->
             <article id="component9">
                 <h1>News Feed</h1>
-                <a href="https://plus.google.com/"><img src="images/blogImages/NewsFeed.png"></a>
+                <a href="https://plus.google.com/"><img src="images/blogImages/NewsFeed.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>Google&#43;'s news feed is designed to deliver the latest news from your friends and companies that you follow. Their target audience is everyone, people of any age and companies of any kind. The purpose of a social media site is to reach as many people as you can no matter race, gender, or age.</p>
                 <h2>Client and User Needs</h2>
@@ -133,7 +133,7 @@
 			<!-- http://www.jaradjohnson.com/ -->
             <article id="component10">
                 <h1>Footer</h1>
-                <a href="http://www.jaradjohnson.com/"><img src="images/blogImages/Footer.png"></a>
+                <a href="http://www.jaradjohnson.com/"><img src="images/blogImages/Footer.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>This is a personal website for a designer by the name Jarad Johnson. It leads you to two companies that he co-founded. One is a design firm and the other a web hosting service. The target audience is anyone looking for those services. There is not target gender. The target age of their audience is generally going to be younger people since the design is built more around the modern look. But really people of any age can use these services.</p>
                 <h2>Client and User Needs </h2>
