--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
             <!-- https://squareup.com/reader -->
             <article id="component2">
-                <h1>General About</h1>
+                <h1>Features</h1>
                 <a href="https://squareup.com/reader"><img src="images/blogImages/AboutGeneral.PNG"></a>
                 <h2>Target Audience</h2>
                 <p>The target audience for Squareup are businesses looking to make sales anywhere they go. This would generally apply to smaller companies, as bigger companies can usually afford a more advanced setup. There is no target gender for this product. The target age for their product can be anyone old enough to own a business. It would generally target people 20 and up, but it can be for any business owner (no matter the age).</p>
